updated img path

--- a/yes.html
+++ b/yes.html
@@ -8,7 +8,7 @@
         <div class="container" onclick="openEnvelope()">
             <div class="envelope"></div>
             <div class="image-container">
-                <img src="../Valentine/letter.png" alt="Opened Letter">
+                <img src="./letter.png" alt="Opened Letter">
             </div>
         </div>
 
